--- a/build.xml
+++ b/build.xml
@@ -488,6 +488,31 @@
         <delete dir="${build.dir}" failonerror="false"/>
 		<delete dir="${temp.dir}" failonerror="false"/>
 	</target>
+	
+	<target name="ldap-test" depends="init">
+        <path id="build.classpath">
+            <fileset dir="${lib.dir}">
+            	<include name="*.jar"/>
+            </fileset>
+			<fileset dir="${3rd_party.dir}">
+				<include name="*.jar" />
+			</fileset>
+        </path>
+		<javac source="1.5" target="1.5" destdir="${build.dir}" includes="org/unitime/timetable/authenticate/jaas/LdapTest.java" debug="true">
+			<src path="${src.dir}" />
+			<classpath refid="build.classpath"/>
+		</javac>
+		<jar destfile="${dist.dir}/ldap-test.jar">
+			<fileset dir="${build.dir}">
+				<include name="**/*.class" />
+			</fileset>
+			<manifest>
+				<attribute name="Main-Class" value="org.unitime.timetable.authenticate.jaas.LdapTest" />
+			</manifest>
+		</jar>
+        <delete dir="${build.dir}" failonerror="false"/>
+		<delete dir="${temp.dir}" failonerror="false"/>
+	</target>
 
 	<target name="build" depends="load-properties,compile-war,done" />
 	<target name="dist" depends="load-properties,compile-war,wiki,build-dist,done" />
