--- a/JavaSource/application.properties
+++ b/JavaSource/application.properties
@@ -346,6 +346,8 @@ tmtbl.event.allowEditPast=false
 unitime.distance.ellipsoid=WGS84
 # Minimap (to be displayed if set)
 unitime.minimap.url=http://maps.google.com/maps/api/staticmap?center=%x,%y&zoom=16&size=600x400&maptype=roadmap&sensor=false&markers=color:blue|%x,%y
+# Minimap to be used in location's tooltip
+unitime.minimap.hint=http://maps.google.com/maps/api/staticmap?center=%x,%y&zoom=15&size=300x200&maptype=roadmap&sensor=false&markers=color:blue|%x,%y
 # Use Google maps to enter room / building coordinates
 unitime.coordinates.googlemap=true
 
