--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -106,6 +106,11 @@
     	<servlet-class>org.unitime.timetable.gwt.server.SimpleEditServlet</servlet-class>
     </servlet>
 
+	<servlet>
+    	<servlet-name>lookupServiceServlet</servlet-name>
+    	<servlet-class>org.unitime.timetable.gwt.server.LookupServlet</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>sectioningServiceServlet</servlet-name>
         <url-pattern>/unitime/sectioningService</url-pattern>
@@ -131,6 +136,11 @@
         <url-pattern>/unitime/simpleEditService</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>lookupServiceServlet</servlet-name>
+        <url-pattern>/unitime/lookupService</url-pattern>
+    </servlet-mapping>
+    
 	<!-- Servlet Mappings -->
 	<servlet-mapping>
 		<servlet-name>action</servlet-name>
