email related properties -- a tiny cleanup

--- a/JavaSource/application.properties
+++ b/JavaSource/application.properties
@@ -99,24 +99,26 @@ log4j.logger.net.sf.cpsolver=INFO, logFile
 #Hide warnings by ActionMapping
 log4j.logger.org.apache.struts.action.ActionMapping=ERROR
 
-#Email settings (UniTime 3.2+)
+# Email settings (UniTime 3.2+)
 # Common settings
 mail.smtp.host=127.0.0.1
 mail.smtp.port=25
-unitime.email.sender=noreply@unitime.org
-unitime.email.sender.name=UniTime Application
-unitime.email.replyto=support@unitime.org
-unitime.email.replyto.name=UniTime Support
-
-# Email notifications
-unitime.email.notif=demo@unitime.org
-unitime.email.notif.name=UniTime Demo
 # If SMTP authentication is needed
 # mail.smtp.user=
 # mail.smtp.password=
 # Enable SSL if needed. Other mail.smtp.ssl properties may need to be set
 # (see http://java.sun.com/products/javamail/javadocs/com/sun/mail/smtp/package-summary.html)
 # mail.smtp.ssl.enable=true
+# Sender address
+unitime.email.sender=noreply@unitime.org
+unitime.email.sender.name=UniTime Application
+# Reply to address
+unitime.email.replyto=support@unitime.org
+unitime.email.replyto.name=UniTime Support
+
+# Email notifications
+unitime.email.notif=demo@unitime.org
+unitime.email.notif.name=UniTime Demo
 # Send solution commit / uncommit notifications
 unitime.email.notif.commit=false
 # Send error reports
