Do not create unitime.log on the solver server side.

--- a/JavaSource/application.properties
+++ b/JavaSource/application.properties
@@ -84,17 +84,17 @@ log4j.logger.org.hibernate.util.JDBCExceptionReporter=ERROR
 log4j.logger.org.hibernate.cache.EhCacheProvider=ERROR
 log4j.logger.org.hibernate.cache.CacheFactory=ERROR
 
-log4j.appender.logFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logFile.File=${catalina.base}/logs/unitime.log
-log4j.appender.logFile.DatePattern='.'yyyy-MM-dd
-log4j.appender.logFile.Append=true
-log4j.appender.logFile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logFile.layout.ConversionPattern=[%-d{MM/dd/yy HH:mm:ss}] %-6p %c{1} -> %m%n
-log4j.logger.org.unitime=INFO, logFile
-log4j.logger.net.sf.cpsolver=INFO, logFile
+log4j.appender.unitime=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.unitime.File=${catalina.base}/logs/unitime.log
+log4j.appender.unitime.DatePattern='.'yyyy-MM-dd
+log4j.appender.unitime.Append=true
+log4j.appender.unitime.layout=org.apache.log4j.PatternLayout
+log4j.appender.unitime.layout.ConversionPattern=[%-d{MM/dd/yy HH:mm:ss}] %-6p %c{1} -> %m%n
+log4j.logger.org.unitime=INFO, unitime
+log4j.logger.net.sf.cpsolver=INFO, unitime
 
 #Show SQL commands
-#log4j.logger.org.hibernate.SQL=DEBUG, logFile
+#log4j.logger.org.hibernate.SQL=DEBUG, unitime
 
 #Hide warnings by ActionMapping
 log4j.logger.org.apache.struts.action.ActionMapping=ERROR
