First version of the Room / Subject / Departmental / Curriculum Timetable page  - so far, only week schedule for the whole term is displayed (in a grid similar to the one on the Student Scheduling Assistant page)  - only one resource at a time   - all related events are displayed  - no filtering, search, etc. yet  - url based, e.g., http://demo.unitime.org/UniTime/gwt.jsp?page=timetable&type=room&name=EDUC101&term=Fal2010 (once the new version is there)    - type can be room, department, curriculum, subject    - name is room name, department code or abbreviation, curriculum abbreviation or subject abbreviation    - term is term + year (+ optional campus, e.g., Fall2010PWL)  - more features will follow

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -111,6 +111,11 @@
     	<servlet-class>org.unitime.timetable.gwt.server.LookupServlet</servlet-class>
     </servlet>
 
+	<servlet>
+    	<servlet-name>eventServiceServlet</servlet-name>
+    	<servlet-class>org.unitime.timetable.gwt.server.EventServlet</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>sectioningServiceServlet</servlet-name>
         <url-pattern>/unitime/sectioningService</url-pattern>
@@ -141,6 +146,11 @@
         <url-pattern>/unitime/lookupService</url-pattern>
     </servlet-mapping>
     
+    <servlet-mapping>
+        <servlet-name>eventServiceServlet</servlet-name>
+        <url-pattern>/unitime/eventService</url-pattern>
+    </servlet-mapping>
+
 	<!-- Servlet Mappings -->
 	<servlet-mapping>
 		<servlet-name>action</servlet-name>
