--- a/build.xml
+++ b/build.xml
@@ -460,22 +460,22 @@
 	</target>
 	
 	<target name="check-jsp" depends="init,check-tomcat-home">
-		<java classname="org.apache.jasper.JspC" fork="yes">
-			<arg line="-uriroot ${jsp.dir} -d ${temp.dir} -p org.apache.jsp -webapp ${jsp.dir} -v -compile -source 1.5 -target 1.5" />
-			<classpath>
-	            <fileset dir="${lib.dir}">
-	            	<include name="*.jar"/>
-	            </fileset>
-	        	<fileset dir="${env.TOMCAT_HOME}/lib">
-	        		<include name="*.jar"/>
-	       		</fileset>
-	        	<fileset dir="${env.TOMCAT_HOME}/bin">
-	        		<include name="*.jar"/>
-	       		</fileset>
-	        	<fileset dir="${3rd_party.dir}">
-	        		<include name="*.jar"/>
-	        	</fileset>
-	        </classpath>
+        <path id="build.classpath">
+            <fileset dir="${lib.dir}">
+            	<include name="*.jar"/>
+            </fileset>
+			<fileset dir="${3rd_party.dir}">
+				<include name="*.jar" />
+			</fileset>
+        </path>
+		<javac source="1.5" target="1.5" destdir="${build.dir}" includes="org/unitime/commons/ant/CreateBaseModelFromXml.java" debug="true" includeantruntime="false">
+			<src path="${src.dir}" />
+			<classpath refid="build.classpath"/>
+		</javac>
+		<java classname="org.apache.jasper.JspC" fork="yes" failonerror="true">
+			<arg line="-uriroot ${jsp.dir} -d ${temp.dir} -p org.apache.jsp -webapp ${jsp.dir} -v -compile" />
+			<classpath refid="build.classpath"/>
+			<classpath path="${build.dir}"/>
 		</java>
 	</target>
 
