Examination timetabling  - added ability to automatically put a preference on an original building (i.e., building of a room in which the related class took place)  - this rule may or may not be applied only in cases when the original room is examination room  - see the new application properties for more details (tmtbl.exam.defaultPrefs.{final|midterm}.originalRoom.{pref|onlyForExaminationRooms})

--- a/JavaSource/application.properties
+++ b/JavaSource/application.properties
@@ -304,6 +304,19 @@ tmtbl.exam.defaultPrefs.midterm.eveningClasses.firstEveningPeriod=216
 tmtbl.exam.defaultPrefs.final.originalRoom.pref=0
 # Midterm exams -> rule disabled
 tmtbl.exam.defaultPrefs.midterm.originalRoom.pref=0
+#
+# For an exam that is attached to a class -> put building preference on a room of the class
+# Final exams -> prefer original building (of the room where the class is placed) 
+#tmtbl.exam.defaultPrefs.final.originalBuilding.pref=-1
+# Final exams -> rule disabled
+tmtbl.exam.defaultPrefs.final.originalBuilding.pref=0
+# Midterm exams -> rule disabled
+tmtbl.exam.defaultPrefs.midterm.originalBuilding.pref=0
+# If the rule is enabled, set whether it is to be applied only when a class is in a room that allows exams.
+#tmtbl.exam.defaultPrefs.final.originalBuilding.onlyForExaminationRooms=false
+#tmtbl.exam.defaultPrefs.midterm.originalBuilding.onlyForExaminationRooms=false
+
+
 
 # Exams default start and stop offsets - This is to be used to reserve time for
 #   students entering the exam room before the exam begins and time for students
