added an ability to tag the build (put a short message after the build number, e.g., RC1 for a release candidate 1)

--- a/build.properties
+++ b/build.properties
@@ -40,3 +40,6 @@ dist.dir=${basedir}/Distributions
 #Java compiler flags
 java.debug=true
 java.optimize=true
+
+#Build tag (to be attached next to the build number)
+build.tag=
