Allow for course numbers to be in lower case   - course numbers are automatically converted to upper case when tmtbl.courseNumber.upperCase application property is set to true   - it defaults to true (current behavior), but if set to false, the upper case conversion is disabled

--- a/JavaSource/application.properties
+++ b/JavaSource/application.properties
@@ -162,6 +162,8 @@ tmtbl.subpart.credit.editable=true
 #Course Number pattern (3 numbers followed by an optional letter) 
 tmtbl.courseNumber.pattern=^[0-9][0-9][0-9]([A-Za-z]){0,1}$
 tmtbl.courseNumber.patternInfo=Course Number must have 3 numbers followed by an optional letter (e.g. 214, 342X)
+# If true, course numbers are automatically converted to upper case
+tmtbl.courseNumber.upperCase=true
 
 #Non University Location name pattern
 #tmtbl.nonUniversityLocation.pattern=^[A-Za-z0-9][A-Za-z0-9 &/-]{0,19}$
