--- a/JavaSource/application.properties
+++ b/JavaSource/application.properties
@@ -385,7 +385,7 @@ unitime.menu.style=Dynamic On Top
 # Sectioning service servlet startup (used by Student Scheduling Assistant)
 # Value true means that the application server will not wait for this service to load all the data.
 # Only set to true when the sectioning service loads on startup (see web.xml, load-on-startup attribute of servlet named sectioningServiceServlet)
-unitime.enrollment.autostart=false
+unitime.enrollment.autostart=true
 
 # Solution passivation time
 # Number of minutes after which an inactive solution can be passivated to disk to save memory
