--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -28,7 +28,7 @@
 	</display-name>
 	
 	<description>
-		University Course Timetabling &amp; Student Sectioning Application
+		University Timetabling Application
 	</description>
 	
 	<welcome-file-list>
@@ -82,7 +82,7 @@
 	<servlet>
     	<servlet-name>sectioningServiceServlet</servlet-name>
     	<servlet-class>org.unitime.timetable.gwt.server.SectioningServlet</servlet-class>
-<!-- <load-on-startup>3</load-on-startup> -->
+		<load-on-startup>3</load-on-startup>
     </servlet>
   
 	<servlet>
